--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="//code.tidio.co/au1zvqrvbgdvsob2ynjdnuamh1i8d8wv.js" async></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
