--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="//code.tidio.co/au1zvqrvbgdvsob2ynjdnuamh1i8d8wv.js" async></script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.pngrepo.com/png/251693/180/closet.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ChicCloset Clothing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
